# s3s

./: Cargo.nix  Cargo.toml  default.nix
nix/: rust.nix  sources.json
src/: main.rs  select.rs
