[package]
name = "s3s"
version = "0.1.6"
authors = ["Simon THOBY <git@nightmared.fr>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
chrono = "0.4"
#rust-s3 = { version = "0.26.3", default-features = false, features = ["rustls-tls"] }
rust-s3 = { git = "https://github.com/nightmared/rust-s3", rev = "a5774a5c32855c886ea79b048793864e3f82f4bc", default-features = false, features = ["with-tokio", "tokio-rustls-tls"] }
#rust-s3 = { path = "/home/nightmared/dev/rust-s3/s3" }
clap = "2.33"
tokio = { version = "0.2.24", features = ["rt-threaded", "blocking", "macros", "fs"] }
sha2 = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.6.0", features = ["macros", "json" ] }
serde_json = "1.0"
rayon = "1.5"
anyhow = "1.0.36"
http = "0.2.2"
