[package]
name = "s3s"
version = "0.1.8"
authors = ["Simon THOBY <git@nightmared.fr>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
chrono = "0.4"
#rust-s3 = { version = "0.26.3", default-features = false, features = ["rustls-tls"] }
rust-s3 = { git = "https://github.com/nightmared/rust-s3", rev = "efcca41adc0075992ecd6a0293a7380a958c2039", default-features = false, features = ["with-tokio", "tokio-rustls-tls"] }
#rust-s3 = { path = "/home/nightmared/dev/rust-s3/s3", default-features = false, features = ["with-tokio", "tokio-rustls-tls"] }
clap = "2.33"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
sha2 = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.6.0", features = ["macros", "json" ] }
serde_json = "1.0"
rayon = "1.5"
anyhow = "1.0.36"
http = "0.2.2"
